need to chain questions together

--- a/index.html
+++ b/index.html
@@ -17,27 +17,31 @@
             <h1>Trivia Game!</h1>
         </div>
 
-        <h2><div id="timer"></div></h2>
+        <h2><div id="timer">10</div></h2>
 
         <div class="questions" id="question">
             <p></p>
         </div>
 
-        <div class="row" id="firstChoice">
-            <p>Answer 1</p>
+        <div class="row">
+            <button type="button" class="btn btn-primary" id="firstChoice"></button>
         </div>
 
-        <div class="row" id="secondChoice">
-            <p>Answer 2</p>
+        <div class="row">
+            <button type="button" class="btn btn-primary" id="secondChoice"></button>
         </div>
 
-        <div class="row" id="thirdChoice">
-            <p>Answer 3</p>
+        <div class="row">
+            <button type="button" class="btn btn-primary" id="thirdChoice"></button>
         </div>
 
-        <div class="row" id="fourthChoice">
-            <p>Answer 4</p>
-        </div>    
+        <div class="row">
+            <button type="button" class="btn btn-primary" id="fourthChoice"></button>
+        </div>
+
+        <h2>Correct: <div id="correct"></div></h2>
+
+        <h2>Wrong: <div id="wrong"></div></h2>
 
 
 
