--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <button type="button" class="btn btn-primary" id="fourthChoice"></button>
         </div>
 
-        <h2>Correct: <div id="correct"></div></h2>
+        <h2>Correct: <div id="correct">0</div></h2>
 
-        <h2>Wrong: <div id="wrong"></div></h2>
+        <h2>Wrong: <div id="wrong">0</div></h2>
 
 
 
